# discord-bot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.toml  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: action.yml
.github/workflows/: checks.yml  docs.yml  prlint.yml
realm_bot/: __init__.py  _all.py  ipc.py  rpc.py
realm_bot/roll/: __init__.py  dataclasses.py  parse.py  response.py
requirements/: dev.in  dev.txt  docs.txt  requirements.in  requirements.txt
rpgbot/: roll.py
rpgbot/roll/: __init__.py  dataclasses.py  parse.py  response.py  roll.py
rpgbot/web/: index.html  vite.config.ts
