[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rpgbot"
requires-python = ">=3.11"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["rpgbot"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }
docs = { file = "requirements/docs.txt" }

[tool.black]
line-length = 80

[tool.ruff]
ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py311"
