[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "realm_bot"
requires-python = ">=3.12.1"
version = "0.1.0"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages = ["realm_bot"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements/requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements/dev.txt" }
docs = { file = "requirements/docs.txt" }

[tool.ruff]
lint.ignore = [
	# ambiguous variable name
	"E741",
]
line-length = 80
target-version = "py312"
